Bug 209150 - The 'Phone Numbers' column does not display any phone numbers
Summary: The 'Phone Numbers' column does not display any phone numbers
Status: VERIFIED FIXED
Alias: None
Product: kaddressbook
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-10-01 23:57 UTC by Sabine Faure
Modified: 2009-10-02 23:16 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Sabine Faure 2009-10-01 23:57:38 UTC
Version:            (using Devel)
Compiler:          gcc 4.3.2 
OS:                Linux
Installed from:    Compiled sources

- Launch Kontact and go to KAB
- Type a couple of contacts with phone numbers
- Right click on the 'Name' column heading and check the 'Phone Numbers' check box.

A 'Phone Numbers' column is added into the middle column of KAB main view but there is no data in it.

It's completely empty even when phone numbers have been entered for contacts.


Trunk, Svn Rev 1030016
Comment 1 Tobias Koenig 2009-10-02 11:02:14 UTC
SVN commit 1030382 by tokoe:

Implement the 'Phone Numbers' functionality

BUG: 209150


 M  +9 -1      contactstreemodel.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1030382
Comment 2 Sabine Faure 2009-10-02 23:16:55 UTC
It is corrected now.

Only the first two phone numbers entered for a contact are now displayed (regardless of how many you have entered) in the 'Phone Numbers' column in the middle column of KAB main view.

Trunk, Svn Rev 1030528