Implement the 'Phone Numbers' functionality

BUG: 209150

svn path=/trunk/KDE/kdepim/kaddressbook/; revision=1030382